[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erised"
version = "0.1.0"
description = "Visual Memory for AI - Store and search images using semantic embeddings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Exla", email = "contact@exla.ai"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "visual-memory", "embeddings", "image-search", "semantic-search"]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://erised.exla.ai"
Documentation = "https://erised.exla.ai/docs"
Repository = "https://github.com/exla-ai/erised"

[tool.setuptools.packages.find]
where = ["."]
include = ["erised*"]

